--- a/pom.xml
+++ b/pom.xml
@@ -10,12 +10,14 @@
     <version>1.0.0</version>
     <modules>
         <module>mybatis-learning</module>
+        <module>Spring-learning</module>
     </modules>
 
     <properties>
         <mybatis.version>3.5.3</mybatis.version>
         <page-helper.version>5.1.11</page-helper.version>
         <mysql.version>8.0.18</mysql.version>
+        <spring.version>5.2.2.RELEASE</spring.version>
     </properties>
 
     <dependencyManagement>
@@ -37,6 +39,32 @@
                 <groupId>mysql</groupId>
                 <artifactId>mysql-connector-java</artifactId>
                 <version>${mysql.version}</version>
+            </dependency>
+            <!--spring-->
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-context</artifactId>
+                <version>${spring.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-core</artifactId>
+                <version>${spring.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-beans</artifactId>
+                <version>${spring.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-aop</artifactId>
+                <version>${spring.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-tx</artifactId>
+                <version>${spring.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
