更新消息队列

--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
         <module>mybatis-learning</module>
         <module>spring-learning</module>
         <module>springmvc-learning</module>
-        <module>shiro-learning</module>
+        <module>rabbitmq-learning</module>
         <module>tomcat-9.0.30-source</module>
     </modules>
 
