--- a/spring-learning/pom.xml
+++ b/spring-learning/pom.xml
@@ -8,6 +8,7 @@
         <version>1.0.0</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
+    <version>1.0.0</version>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>spring-learning</artifactId>
