--- a/rabbitmq-learning/src/main/resources/application.properties
+++ b/rabbitmq-learning/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=8080
 
-spring.application.name=mq-learning
+spring.application.name=rabbitmq-learning
 
 
 spring.rabbitmq.addresses=127.0.0.1
