--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,5 @@ build/
 ### VS Code ###
 .vscode/
 .mvn/
+DubboLearningPersonServiceConsumerApplication.java
+DubboLearningPersonServiceProviderApplication.java
