--- a/dubbo-learning/dubbo-learning-person-service-provider/pom.xml
+++ b/dubbo-learning/dubbo-learning-person-service-provider/pom.xml
@@ -2,35 +2,53 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
     <parent>
+        <artifactId>dubbo-learning</artifactId>
         <groupId>com.github.yangguang19</groupId>
-        <artifactId>framework-learning</artifactId>
         <version>1.0.0</version>
     </parent>
-    <artifactId>springmvc-learning</artifactId>
+    <packaging>jar</packaging>
+
+    <artifactId>dubbo-learning-person-service-provider</artifactId>
+    <name>dubbo-learning-person-service-provider</name>
 
     <dependencies>
+        <!--api-->
+        <dependency>
+            <groupId>com.github.yangguang19</groupId>
+            <artifactId>dubbo-learning-api</artifactId>
+        </dependency>
+
+        <!--boot-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter</artifactId>
+        </dependency>
+        <!--web-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
+
+        <!--devtool-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter</artifactId>
+            <artifactId>spring-boot-devtools</artifactId>
+            <optional>true</optional>
+        </dependency>
+
+        <!--junit-->
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
         </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
-            <exclusions>
-                <exclusion>
-                    <groupId>org.junit.vintage</groupId>
-                    <artifactId>junit-vintage-engine</artifactId>
-                </exclusion>
-            </exclusions>
         </dependency>
     </dependencies>
+
 
 </project>
