--- a/jdk&jvm&juc-learning/pom.xml
+++ b/jdk&jvm&juc-learning/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId><![CDATA[jdk&jvm&juc]]></artifactId>
+    <artifactId><![CDATA[jdk&jvm&juc-learning]]></artifactId>
 
 
 </project>
