--- a/dubbo-learning/dubbo-learning-api/pom.xml
+++ b/dubbo-learning/dubbo-learning-api/pom.xml
@@ -40,6 +40,13 @@
                 </exclusion>
             </exclusions>
         </dependency>
+
+        <!--hystrix 服务熔断-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-hystrix</artifactId>
+        </dependency>
+
         <!--lombok-->
         <dependency>
             <groupId>org.projectlombok</groupId>
