--- a/dubbo-learning/dubbo-learning-person-service-consumer/src/main/resources/application.properties
+++ b/dubbo-learning/dubbo-learning-person-service-consumer/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 
 spring.application.name=spring-dubbo-learning-person-service-consumer
-server.port=8081
+server.port=8080
 
 dubbo.application.name=dubbo-learning-person-service-consumer
 dubbo.protocol.name=dubbo
-dubbo.protocol.port=20880
+#dubbo.protocol.port=20880
 dubbo.registry.address=zookeeper://127.0.0.1:2183
 
 #dubbo.consumer.retries=3
