--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
         <module>tomcat-9.0.30-source</module>
         <module>zookeeper-learning</module>
         <module>dubbo-learning</module>
-        <module><![CDATA[jdk&jvm&juc-learning]]></module>
+        <module>jdk_jvm_juc-learning</module>
     </modules>
 
     <properties>
@@ -37,6 +37,7 @@
         <dubbo-starter.version>2.7.3</dubbo-starter.version>
         <zookeeper.version>3.5.6</zookeeper.version>
         <curator.version>3.3.0</curator.version>
+        <spring-cloud.version>Hoxton.SR1</spring-cloud.version>
         <lombok.version>1.18.10</lombok.version>
         <junit.version>4.12</junit.version>
     </properties>
@@ -78,6 +79,15 @@
                 <groupId>com.github.yangguang19</groupId>
                 <artifactId>dubbo-learning</artifactId>
                 <version>${project.version}</version>
+            </dependency>
+
+            <!--SpringCloud-->
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-dependencies</artifactId>
+                <version>${spring-cloud.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
             </dependency>
 
             <!--mybatis-->
