--- a/dubbo-learning/pom.xml
+++ b/dubbo-learning/pom.xml
@@ -3,7 +3,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>com.github.yangguang19</groupId>
+        <groupId>com.github.guang19</groupId>
         <artifactId>framework-learning</artifactId>
         <version>1.0.0</version>
     </parent>
