--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.2.2.RELEASE</version>
+        <version>2.2.4.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
@@ -26,6 +26,7 @@
         <module>dubbo-learning</module>
         <module>jdk_jvm_juc-learning</module>
         <module>swagger-learning</module>
+        <module>elasticsearch-learning</module>
     </modules>
 
     <properties>
@@ -85,6 +86,11 @@
             <dependency>
                 <groupId>com.github.guang19</groupId>
                 <artifactId>swagger-learning</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.github.guang19</groupId>
+                <artifactId>elasticsearch-learning</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
