fix:修改jdk&jvm&juc中错误内容

--- a/jdk_jvm_juc-learning/pom.xml
+++ b/jdk_jvm_juc-learning/pom.xml
@@ -11,5 +11,11 @@
 
     <artifactId>jdk_jvm_juc-learning</artifactId>
 
-
+    <dependencies>
+        <!--可用此工具查看对象内存布局-->
+        <dependency>
+            <groupId>org.openjdk.jol</groupId>
+            <artifactId>jol-core</artifactId>
+        </dependency>
+    </dependencies>
 </project>
