--- a/jdk_jvm_juc-learning/pom.xml
+++ b/jdk_jvm_juc-learning/pom.xml
@@ -17,5 +17,10 @@
             <groupId>org.openjdk.jol</groupId>
             <artifactId>jol-core</artifactId>
         </dependency>
+        <!--cglib-->
+        <dependency>
+            <groupId>cglib</groupId>
+            <artifactId>cglib</artifactId>
+        </dependency>
     </dependencies>
 </project>
