feat:更新设计模式

--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
         <module>jdk_jvm_juc-learning</module>
         <module>swagger-learning</module>
         <module>elasticsearch-learning</module>
+        <module>design-pattern</module>
     </modules>
 
     <properties>
