--- a/datastructure_algorithm/pom.xml
+++ b/datastructure_algorithm/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>datastructureandAlgorithm</artifactId>
+    <artifactId>datastructure_algorithm</artifactId>
 
 
 </project>
