--- a/jdk_jvm_juc-learning/pom.xml
+++ b/jdk_jvm_juc-learning/pom.xml
@@ -9,6 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
+    <!--jdk,jvm,juc知识点-->
     <artifactId>jdk_jvm_juc-learning</artifactId>
 
     <dependencies>
