--- a/swagger-learning/pom.xml
+++ b/swagger-learning/pom.xml
@@ -9,6 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
+    <!--swagger-->
     <artifactId>swagger-learning</artifactId>
 
     <dependencies>
