--- a/tomcat-9.0.30-source/pom.xml
+++ b/tomcat-9.0.30-source/pom.xml
@@ -11,6 +11,7 @@
         <version>1.0.0</version>
     </parent>
 
+    <!--tomcat源码-->
     <artifactId>tomcat-9.0.30-source</artifactId>
     <name>tomcat-9.0.30-source</name>
 
