--- a/rdbms-learning/pom.xml
+++ b/rdbms-learning/pom.xml
@@ -9,7 +9,8 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>database-learning</artifactId>
+    <!--关系型数据库知识点-->
+    <artifactId>rdbms-learning</artifactId>
 
 
 </project>
