--- a/zookeeper-learning/pom.xml
+++ b/zookeeper-learning/pom.xml
@@ -9,6 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
+    <!--zookeeper 知识点-->
     <artifactId>zookeeper-learning</artifactId>
 
     <dependencies>
