--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,7 @@
         <module>rdbms-learning</module>
         <module>computer-network</module>
         <module>datastructure_algorithm</module>
+        <module>nosql-learning</module>
     </modules>
 
     <properties>
@@ -124,6 +125,11 @@
                 <groupId>com.github.guang19</groupId>
                 <artifactId>datastructure_algorithm</artifactId>
                 <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.github.guang19</groupId>
+                <artifactId>nosql-learning</artifactId>
+                <version>1.0.0</version>
             </dependency>
 
             <!--SpringCloud-->
