修改:对象内存布局部分内容

--- a/.gitignore
+++ b/.gitignore
@@ -33,5 +33,6 @@ build/
 DubboLearningPersonServiceConsumerApplication.java
 DubboLearningPersonServiceProviderApplication.java
 
+### gitbook
 _book/
 node_modules/
