--- a/swagger-learning/pom.xml
+++ b/swagger-learning/pom.xml
@@ -22,7 +22,7 @@
             <artifactId>springfox-swagger2</artifactId>
         </dependency>
 
-
+        <!--boot-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
