--- a/elasticsearch-learning/pom.xml
+++ b/elasticsearch-learning/pom.xml
@@ -2,21 +2,15 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+
     <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.3.0.RELEASE</version>
-        <relativePath/> <!-- lookup parent from repository -->
+        <artifactId>framework-learning</artifactId>
+        <groupId>com.github.guang19</groupId>
+        <version>1.0.0</version>
     </parent>
     <groupId>com.github</groupId>
-    <artifactId>elasticsearch-learning</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
-    <name>elasticsearch-learning</name>
-    <description>elasticsearch-learning</description>
 
-    <properties>
-        <java.version>11</java.version>
-    </properties>
+    <artifactId>elasticsearch-learning</artifactId>
 
     <dependencies>
         <dependency>
@@ -37,9 +31,8 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>1.18.12</version>
+            <scope>provided</scope>
         </dependency>
-
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -53,14 +46,5 @@
             </exclusions>
         </dependency>
     </dependencies>
-
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-            </plugin>
-        </plugins>
-    </build>
 
 </project>
