增加&修改: 增加netty模块&修改部分文章的语义

--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,7 @@
         <module>linux-learning</module>
         <module>tomcat9.0-source</module>
         <module>elasticsearch-learning</module>
+        <module>netty-learning</module>
     </modules>
 
     <properties>
